[gd_scene format=3 uid="uid://coxov8vysyrte"]

[ext_resource type="Script" uid="uid://e4hamo8nxdjf" path="res://scripts/VersusScreen.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://c8klqxtkxhqhc" path="res://assets/UI/versus.png" id="2_versus"]

[node name="VersusScreen" type="Control" unique_id=238937212]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="." unique_id=564872134]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.168627, 0.266667, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=898916452]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopContainer" type="SubViewportContainer" parent="VBoxContainer" unique_id=1509498588]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/TopContainer" unique_id=763576210]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(720, 640)
render_target_update_mode = 4

[node name="TopScene" type="Node3D" parent="VBoxContainer/TopContainer/SubViewport" unique_id=1355393019]

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/TopContainer/SubViewport/TopScene" unique_id=458552219]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.5, 2.5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/TopContainer/SubViewport/TopScene" unique_id=100332077]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 0, 0)

[node name="SpawnPoint" type="Marker3D" parent="VBoxContainer/TopContainer/SubViewport/TopScene" unique_id=2103969349]

[node name="BottomContainer" type="SubViewportContainer" parent="VBoxContainer" unique_id=94805787]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/BottomContainer" unique_id=886062859]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(720, 640)
render_target_update_mode = 4

[node name="BottomScene" type="Node3D" parent="VBoxContainer/BottomContainer/SubViewport" unique_id=738252765]

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/BottomContainer/SubViewport/BottomScene" unique_id=1646587771]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.5, 2.5)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/BottomContainer/SubViewport/BottomScene" unique_id=1554302116]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 0, 0)

[node name="SpawnPoint" type="Marker3D" parent="VBoxContainer/BottomContainer/SubViewport/BottomScene" unique_id=1870867458]

[node name="VSImage" type="TextureRect" parent="." unique_id=1998318681]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(128, 128)
texture = ExtResource("2_versus")
expand_mode = 1
stretch_mode = 5

[node name="SkipLabel" type="Label" parent="." unique_id=878876361]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Tap to Skip"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=408714604]
